// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DecodeStream > Fixtures > should decode no-bom-charset-bracket.html 1`] = `
"<!DOCTYPE html>
<html>
    <head><meta charset="utf-8">
    </head>
    <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-http-equiv-no-quotes.html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
      <!--<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-8">-->
      <meta http-equiv=Content-Type content=text/html;charset=ISO-8859-5>
      <script src="/resources/testharness.js"></script>
      <script src="/resources/testharnessreport.js"></script>
  </head>
  <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-http-equiv-refresh.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta http-equiv=refresh http-equiv=Content-Type content="text/html;charset=iso-8859-2">
    </head>
    <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-http-equiv-second-charset.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta http-equiv=Content-Type content="text/html;charsetcharset=iso-8859-2">
    </head>
    <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-http-equiv-tis-620.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
        <meta http-equiv="content-type" content="text/html;charset='tis-620'">
    </head>
    <body>This is not really tis-620 (windows-874), of course</body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-http-equiv-trailing-space.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta http-equiv=Content-Type content="text/html;charset=iso-8859-2 ">
    </head>
    <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-koi8.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
        <meta charset="koi8">
    </head>
    <body>This is not really koi8 (KOI8-R), of course</body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-short-comment.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
    <!--><meta charset="iso-8859-2">
    </head>
    <body></body>
</html>
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-utf-16.html 1`] = `
"<!DOCTYPE html>
<html>
<meta charset="utf-16">
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-utf-16be.html 1`] = `
"<!DOCTYPE html>
<html>
<meta charset="utf-16be">
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-utf-16le.html 1`] = `
"<!DOCTYPE html>
<html>
<meta charset="utf-16le">
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-charset-x-user-defined.html 1`] = `
"<!DOCTYPE html>
<html>
<meta charset="x-user-defined">
"
`;

exports[`DecodeStream > Fixtures > should decode no-bom-no-charset.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
    </head>
    <body>©</body>
</html>"
`;

exports[`DecodeStream > Fixtures > should decode utf-8-bom.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset="ISO-8859-4"></script>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
    </head>
    <body>©</body>
</html>"
`;

exports[`DecodeStream > Fixtures > should decode utf-16be-bom.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset="ISO-8859-4"></script>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
    </head>
    <body>©</body>
</html>"
`;

exports[`DecodeStream > Fixtures > should decode utf-16le-bom.html 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset="ISO-8859-4"></script>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
    </head>
    <body>©</body>
</html>"
`;

exports[`DecodeStream > should decode a file one byte at a time 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset="ISO-8859-4"></script>
        <script src="script-utf8.js" charset="UTF-8"></script>
        <script src="script-iso88591.js" charset="ISO-8859-1"></script>
    </head>
    <body>©</body>
</html>"
`;
